# chess-engine

./: .clang-format  .gitignore  CMakeLists.txt  README.md
assets/models/bishop/: bishop.mtl
assets/models/chessboard/: chessboard.mtl
assets/models/special_block/: special_block.mtl
lib/glmax/: CMakeLists.txt
lib/glmax/src/: Camera.cpp  Camera.hpp  Material.hpp  Mesh.cpp  Mesh.hpp  Shader.cpp  Shader.hpp  Texture.cpp  Texture.hpp  Vertex.hpp
lib/quick_imgui/: CMakeLists.txt  LICENSE  README.md
lib/quick_imgui/include/quick_imgui/: quick_imgui.hpp
lib/quick_imgui/lib/glfw/: CONTRIBUTORS.md  README.md
lib/quick_imgui/lib/glfw/docs/: build.dox  input.dox  vulkan.dox
lib/quick_imgui/lib/glfw/include/GLFW/: glfw3.h
lib/quick_imgui/lib/glfw/src/: cocoa_window.m  win32_window.c  wl_platform.h  wl_window.c
lib/quick_imgui/lib/glfw/tests/: glfwinfo.c
lib/quick_imgui/src/: AverageTime.cpp  ImGuiWrapper.cpp  ImGuiWrapper.hpp  quick_imgui.cpp
shaders/: model.fs.glsl  model.vs.glsl  skybox.vs.glsl
src/: Animation.hpp  App.cpp  App.hpp  Chessboard.cpp  Chessboard.hpp  GameObject.cpp  GameObject.hpp  GameObjectManager.cpp  GameObjectManager.hpp  Piece.cpp  Piece.hpp  PieceManager.cpp  PieceManager.hpp  Renderer3D.cpp  Renderer3D.hpp  main.cpp  utils.hpp
src/buffers/: EBO.hpp
src/game2D/: Bishop.cpp  Bishop.hpp  ChessGame.cpp  ChessGame.hpp  Chessboard.cpp  Chessboard.hpp  King.cpp  King.hpp  Knight.cpp  Knight.hpp  Pawn.cpp  Pawn.hpp  Piece.cpp  Piece.hpp  PieceMove.hpp  Queen.cpp  Queen.hpp  Rook.cpp  Rook.hpp  Types.hpp  main.cpp  utils.cpp  utils.hpp
src/game2D/gui/: GameTracker.cpp  GameTracker.hpp  Settings.cpp  Settings.hpp
src/gui/: Game2DWrapper.cpp  Game2DWrapper.hpp  GameTracker.hpp  Settings.cpp  Settings.hpp
src/math/: Markov.cpp  Markov.hpp  RNG.cpp  RNG.hpp
src/renderer3D/: Animation.hpp  GameObject.cpp  GameObject.hpp  GameObjectManager.cpp  GameObjectManager.hpp  Renderer3D.cpp  Renderer3D.hpp  Skybox.cpp  Skybox.hpp  utils.hpp
src/renderer3D/buffers/: EBO.cpp  VAO.cpp  VBO.cpp  VBO.hpp
